--- a/src/design/ant/index.less
+++ b/src/design/ant/index.less
@@ -8,9 +8,10 @@
   }
 }
 
-span.anticon:not(.app-iconify) {
-  vertical-align: 0.125em !important;
-}
+// 消息框
+// span.anticon:not(.app-iconify) {
+//   vertical-align: 0.125em !important;
+// }
 
 .ant-back-top {
   right: 20px;
