--- a/src/components/VxeTable/src/css/component.scss
+++ b/src/components/VxeTable/src/css/component.scss
@@ -181,3 +181,66 @@
 .ant-btn + .ant-btn {
   margin-left: 0.8rem;
 }
+
+// vxe-form
+// 垂直布局
+.vxe-form.vxe-form--vertical {
+  height: 100%;
+
+  .vxe-form--wrapper {
+    height: inherit;
+  }
+
+  .vxe-form--item {
+    width: 100%;
+    padding: 0;
+
+    .vxe-form--item-inner {
+      flex-direction: column;
+      align-items: initial;
+    }
+
+    .form-searchreset {
+      margin-top: 1em;
+    }
+  }
+}
+
+// 日期范围垂直布局(暂时不用)
+.range-picker--vertical {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  .ant-picker-range-separator {
+    display: none;
+  }
+
+  .ant-picker-suffix {
+    display: none;
+  }
+
+  .ant-picker-input > input:placeholder-shown {
+    flex: 1;
+  }
+
+  // .ant-picker-input:nth-of-type(1)::before {
+  //   content: '从：';
+  // }
+
+  .ant-picker-input:nth-of-type(2)::before {
+    content: '到：';
+  }
+}
+
+// 输入框范围渲染器
+.input-range {
+  display: flex;
+  gap: 5px;
+}
+
+// 表单查询重置
+.form-searchreset {
+  display: flex;
+  justify-content: center;
+}
