--- a/src/components/VxeTable/src/css/component.scss
+++ b/src/components/VxeTable/src/css/component.scss
@@ -177,9 +177,16 @@
   padding-left: 5px !important;
 }
 
-// ant组件
-.ant-btn + .ant-btn {
-  margin-left: 0.8rem;
+.vxe-table {
+  .vxe-header--row {
+    .search {
+      padding: 1px !important;
+
+      .vxe-cell {
+        padding: 1px !important;
+      }
+    }
+  }
 }
 
 // vxe-form
@@ -201,46 +208,63 @@
     }
 
     .form-searchreset {
+      display: flex;
+      justify-content: center;
       margin-top: 1em;
+    }
+
+    // 输入框范围渲染器
+    .input-range {
+      display: flex;
+      gap: 5px;
+    }
+
+    // 日期
+    .ant-picker {
+      width: 100%;
+    }
+
+    // ant组件
+    .ant-btn + .ant-btn {
+      margin-left: 0.8rem;
+    }
+  }
+}
+
+// pane内的
+.splitpanes__pane {
+  .vxe-grid {
+    .vxe-grid--toolbar-wrapper {
+      .vxe-toolbar {
+        padding: 0;
+      }
     }
   }
 }
 
 // 日期范围垂直布局(暂时不用)
-.range-picker--vertical {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+// .range-picker--vertical {
+//   display: flex;
+//   flex-direction: column;
+//   width: 100%;
 
-  .ant-picker-range-separator {
-    display: none;
-  }
+//   .ant-picker-range-separator {
+//     display: none;
+//   }
 
-  .ant-picker-suffix {
-    display: none;
-  }
+//   .ant-picker-suffix {
+//     display: none;
+//   }
 
-  .ant-picker-input > input:placeholder-shown {
-    flex: 1;
-  }
+//   .ant-picker-input > input:placeholder-shown {
+//     flex: 1;
+//   }
 
-  // .ant-picker-input:nth-of-type(1)::before {
-  //   content: '从：';
-  // }
+//   // .ant-picker-input:nth-of-type(1)::before {
+//   //   content: '从：';
+//   // }
 
-  .ant-picker-input:nth-of-type(2)::before {
-    content: '到：';
-  }
-}
-
-// 输入框范围渲染器
-.input-range {
-  display: flex;
-  gap: 5px;
-}
-
-// 表单查询重置
-.form-searchreset {
-  display: flex;
-  justify-content: center;
-}
+//   .ant-picker-input:nth-of-type(2)::before {
+//     content: '到：';
+//   }
+// }
